package booknote;

enum ErrorCode
{
	ERROR = -1;
	SUCCESS = 0;
}

message Head
{
	optional uint32 cmd = 1;
	optional uint32 ecode = 2;
	optional uint32 seq = 3;
}

message ReqRegiste
{
	required Head head = 1;
	required string user = 2;
	required string passwd = 3;
	required string verify_code = 4;
}

message ReqUserLogin
{
	required Head head = 1;
	optional string user = 2;
	optional string passwd = 3;	
}

message ResUserLogin
{
	required Head head = 1;
}


